updated actions file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,11 @@ jobs:
         #SGF_PASSWORD: ${{ secrets.SGF_PASSWORD }}
       #run: python scrt/user_trier.py
 
-    - name: Download SCI Report
-      env:
-        SCI_USERNAME: ${{ secrets.SCI_USERNAME }}
-        SCI_PASSWORD: ${{ secrets.SCI_PASSWORD }}
-      run: python scrt/user_sci.py
+    #- name: Download SCI Report
+      #env:
+        #SCI_USERNAME: ${{ secrets.SCI_USERNAME }}
+        #SCI_PASSWORD: ${{ secrets.SCI_PASSWORD }}
+      #run: python scrt/user_sci.py
 
     #- name: Update user_trier Worksheet
       #env:
@@ -37,8 +37,14 @@ jobs:
         #SOURCE_SHEET_ID: ${{ secrets.SOURCE_SHEET_ID }}
       #run: python scrt/proc/ready_user_trier.py
 
-    - name: Update user_sci Worksheet
+    #- name: Update user_sci Worksheet
+      #env:
+        #GSA_CREDENTIALS: ${{ secrets.CRAPPY_CREDENTIALS }}
+        #SOURCE_SHEET_ID: ${{ secrets.SOURCE_SHEET_ID }}
+      #run: python scrt/proc/ready_user_sci.py
+
+    - name: Update filtered_user Worksheet
       env:
         GSA_CREDENTIALS: ${{ secrets.CRAPPY_CREDENTIALS }}
         SOURCE_SHEET_ID: ${{ secrets.SOURCE_SHEET_ID }}
-      run: python scrt/proc/ready_user_sci.py
+      run: python scrt/calc/user_calc.py
